# app/Http/Controllers/UserController.php
@@ -1,22 +1,0 @@
-<?php
-
-namespace App\Http\Controllers;
-
-use Illuminate\Http\Request;
-
-class UserController extends Controller
-{
-   /**
-     * @OA\Get(
-     *     path="/api/user",
-     *     summary="Get logged-in user details",
-     *     @OA\Response(response="200", description="Success"),
-     *     security={{"bearerAuth":{}}}
-     * )
-     */
-    public function getUserDetails(Request $request)
-    {
-        $user = $request->user();
-        return response()->json(['user' => $user], 200);
-    }
-}
